<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Ingresos">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewSize">

        <TextView
            android:id="@+id/textRegistraIngreso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="14dp"
            android:text="@string/registroIngreso"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/campoCantidadIngreso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/campoCantidadIngreso"
            android:layout_width="360dp"
            android:layout_height="48dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/ingresaCantidad"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRegistraIngreso" />

        <RadioGroup
            android:id="@+id/gpIngresos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnGuardarIngreso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/campoCantidadIngreso">

            <RadioButton
                android:id="@+id/rdBtnNomina"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/rdBtnNomina"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rdBtnBeca"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/rdBtnBeca"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rdBtnFreelance"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/rdBtnFreelance"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rdBtnExtras"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/rdBtnExtras"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>

        <Button
            android:id="@+id/btnGuardarIngreso"
            android:layout_width="182dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="610dp"
            android:backgroundTint="#58CD81"
            android:fontFamily="casual"
            android:text="@string/btnGuardarIngreso"
            android:textAllCaps="false"
            android:textColor="#1C1818"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>